--- a/style.css
+++ b/style.css
@@ -206,3 +206,34 @@ body {
 .close-btn:hover .close-icon:after {
   transform: translate(-50%, -50%) rotate(-45deg) scale(1.1);
 }
+    .sidebar .about + .links {
+  margin-top: 20px;
+}
+
+.links {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.button {
+  display: inline-block;
+  padding: 8px 12px;
+  background-color: #fff;
+  color: #333;
+  border-radius: 5px;
+  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s ease;
+  text-decoration: none;
+  width: auto;
+  margin-bottom: 10px;
+}
+
+.button:hover {
+  transform: scale(1.16);
+}
+
+.button:focus {
+  outline: none;
+}
+
