--- a/style.css
+++ b/style.css
@@ -7,8 +7,6 @@ body {
   min-height: 100vh;
 }
 
-
-    
 .container {
   position: flex;
   top: 0%;
@@ -24,35 +22,30 @@ body {
   display: flex;
 }
 
+.container:hover {
+  transform: scale(1);
+}
 
-    
-    .container:hover {
-      transform: scale(1);
-    }
-    
-    .sidebar {
+.sidebar {
   flex-basis: 45%;
   padding-right: 20px;
- 
+}
 
+.profile-img {
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  margin-bottom: 20px;
+  box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.1);
+  transform: rotate(-2deg);
+  transition: transform 0.3s ease;
+}
 
-    }
-    
-    .profile-img {
-      width: 150px;
-      height: 150px;
-      border-radius: 50%;
-      margin-bottom: 20px;
-      box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.1);
-      transform: rotate(-2deg);
-      transition: transform 0.3s ease;
-    }
-    
-    .profile-img:hover {
-      transform: rotate(0deg) scale(1.05);
-      box-shadow: 6px 6px 12px rgba(0, 0, 0, 0.2);
-    }
-    
+.profile-img:hover {
+  transform: rotate(0deg) scale(1.05);
+  box-shadow: 6px 6px 12px rgba(0, 0, 0, 0.2);
+}
+
 .about {
   background-color: #f8f8f8;
   padding: 20px;
@@ -70,102 +63,112 @@ body {
 }
 
 .about:hover {
-  transform: translateY(10); /* Schweben-Effekt */
+  transform: translateY(10px); /* Schweben-Effekt */
 }
 
-
-
-    
-    .projects {
+.projects {
   flex-basis: 50%;
-        justify-content: center;
+  justify-content: center;
   align-items: center;
+}
 
-    }
-    
-    .project {
-      background-color: #f8f8f8;
-      padding: 20px;
-      margin-bottom: 20px;
-      border-radius: 10px;
-      box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.1);
-      transition: transform 0.3s ease;
-      margin-left: 80px;
-    }
-    
-    .project:hover {
-      transform: scale(1.09);
-      box-shadow: 6px 6px 12px rgba(0, 0, 0, 0.2);
-    }
-    
-    .project h2 {
-      margin-top: 0;
-      text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1);
-      transition: text-shadow 0.3s ease;
-    }
-    
-    .project:hover h2 {
-      text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
-    }
-    
-    .project p {
-      margin-bottom: 10px;
-      color: #666;
-    }
-    
-    .project a {
-      display: inline-block;
-      padding: 8px 12px;
-      background-color: #fff;
-      color: #333;
-      border-radius: 5px;
-      box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1);
-      transition: transform 0.3s ease;
-      text-decoration: none;
-    }
-    
-    .project a:hover {
-      transform: scale(1.16);
-    }
-    
-    .overlay {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background-color: rgba(0, 0, 0, 0.8);
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      z-index: 9999;
-      opacity: 0;
-      visibility: hidden;
-      transition: opacity 0.3s ease, visibility 0.3s ease;
-    }
-    
-    .overlay.active {
-      opacity: 1;
-      visibility: visible;
-      backdrop-filter: blur(5px)
-    }
-    
-    .overlay-content {
-      background-color: #fff;
-      padding: 40px;
-      border-radius: 10px;
-      box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.1);
-      transform: scale(0.9);
-      transition: transform 0.3s ease;
-      position: relative;
-    }
-    
-    
-    .overlay.active .overlay-content {
-      transform: scale(1);
-    }
-    
-    .close-btn {
+.project {
+  background-color: #f8f8f8;
+  padding: 20px;
+  margin-bottom: 20px;
+  border-radius: 10px;
+  box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s ease;
+  margin-left: 80px;
+}
+
+.project:hover {
+  transform: scale(1.09);
+  box-shadow: 6px 6px 12px rgba(0, 0, 0, 0.2);
+}
+
+.project h2 {
+  margin-top: 0;
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1);
+  transition: text-shadow 0.3s ease;
+}
+
+.project:hover h2 {
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
+}
+
+.project p {
+  color: #666;
+}
+
+.project a {
+  display: inline-block;
+  padding: 8px 12px;
+  background-color: #fff;
+  color: #333;
+  border-radius: 5px;
+  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s ease;
+  text-decoration: none;
+}
+
+.project a:hover {
+  transform: scale(1.16);
+}
+
+.overlay {
+  opacity: 0;
+  visibility: hidden;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.8);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 0.3s ease, visibility 0.3s ease;
+}
+
+.overlay-content {
+  background-color: #fff;
+  padding: 40px;
+  border-radius: 10px;
+  box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.1);
+  transform: scale(0.9);
+  transition: transform 0.3s ease;
+  position: relative;
+}
+
+.overlay.active .overlay-content {
+  transform: scale(0);
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  max-width: 50%;
+  max-height: 50%;
+  width: auto;
+  height: auto;
+  padding: 40px;
+  margin: 10px;
+  overflow-y: auto;
+  opacity: 1;
+  visibility: visible;
+  transition: opacity 0.3s ease, visibility 0.3s ease;
+}
+
+.overlay.active {
+  opacity: 1;
+  visibility: visible;
+}
+
+.close-btn {
   position: absolute;
   top: 10px;
   right: 10px;
@@ -182,7 +185,8 @@ body {
   height: 100%;
 }
 
-.close-icon:before, .close-icon:after {
+.close-icon:before,
+.close-icon:after {
   content: "";
   position: absolute;
   top: 50%;
@@ -198,7 +202,8 @@ body {
   transform: translate(-50%, -50%) rotate(-45deg);
 }
 
-.close-btn:hover .close-icon:before, .close-btn:hover .close-icon:after {
+.close-btn:hover .close-icon:before,
+.close-btn:hover .close-icon:after {
   background-color: #a30b0b;
   transform: translate(-50%, -50%) rotate(45deg) scale(1.1);
 }
@@ -206,7 +211,8 @@ body {
 .close-btn:hover .close-icon:after {
   transform: translate(-50%, -50%) rotate(-45deg) scale(1.1);
 }
-    .sidebar .about + .links {
+
+.sidebar .about + .links {
   margin-top: 20px;
 }
 
@@ -236,4 +242,3 @@ body {
 .button:focus {
   outline: none;
 }
-
