--- a/style.css
+++ b/style.css
@@ -169,6 +169,14 @@ body {
   backdrop-filter: blur(5px)
 }
 
+ .overlay.active .overlay-content img {
+         max-width: 100%;
+         max-height: 100%;
+      }
+      .overlay.active .overlay-content i {
+         margin-right: 5px;
+      }
+
 .close-btn {
   position: absolute;
   top: 10px;
