feat: cleanup HTML file

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #f0f0f0;
+  background-color: gainsboro;
   font-family: Arial, sans-serif;
   display: flex;
   justify-content: center;
