--- a/style.css
+++ b/style.css
@@ -377,3 +377,45 @@ body {
 .username-input-container button:focus {
   outline: none;
 }
+img {
+  max-width: 100%;
+  height: auto;
+}
+
+.menu {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: transparent;
+  padding: 10px;
+}
+
+.menu ul {
+  list-style: none;
+  display: flex;
+}
+
+.menu li {
+  margin-right: 10px;
+  margin-left: 10px;
+}
+
+.menu a {
+  display: inline-block;
+  padding: 8px 12px;
+  background-color: #fff;
+  color: #333;
+  border-radius: 5px;
+  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s ease;
+  text-decoration: none;
+  width: auto;
+}
+
+.menu a:hover {
+  transform: scale(1.3);
+}
+
+.menu a:focus {
+  outline: none;
+}
