--- a/style.css
+++ b/style.css
@@ -340,6 +340,11 @@ body {
 }
 /* Weitere CSS-Styles hier */
 
+.update-username {
+  display: flex;
+  flex-direction: column;
+}
+
 .username-input-container {
   display: flex;
   align-items: center;
@@ -377,6 +382,21 @@ body {
 .username-input-container button:focus {
   outline: none;
 }
+
+/* GitHub Search */
+
+select {
+  position: relative;
+  border: none;
+  width: 50%;
+  transform: translate(35%, -10%);
+  background: transparent;
+}
+
+select option {
+  margin-top: 5px;
+}
+
 img {
   max-width: 100%;
   height: auto;
@@ -418,15 +438,4 @@ img {
 
 .menu a:focus {
   outline: none;
-}
-
-/* GitHub Search */
-
-.gh-search-bar {
-  width: 300px;
-  height: 100px;
-}
-.gh-search-list {
-  list-style: none;
-  padding: 0;
 }
