--- a/style.css
+++ b/style.css
@@ -1,7 +1,13 @@
 body {
-  background-color: gainsboro;
+  background-attachment: fixed;
+  background-position: center;
+  background-size: cover; 
   font-family: Arial, sans-serif;
   display: flex;
+  margin: 0px;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;
   justify-content: center;
   align-items: center;
   min-height: 100vh;
@@ -13,11 +19,10 @@ body {
   width: 80%;
   height: 80%;
   padding: 40px;
-  background-color: #f0f0f0;
+  background-color: #f0f0f0e7;
   border-radius: 20px;
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
  /* transform: scale(0.95); */
-  transition: transform 0.3s ease;
   display: flex;
 }
 
@@ -95,7 +100,7 @@ body {
 }
 
 .project p {
-  color: #812020;
+  color: #070202;
 }
 
 .project a {
@@ -367,4 +372,44 @@ img {
 .projectWrapper {
   padding-left: 5%;
   min-width: 45%;
+}
+
+.project-card {
+  background-color: #f8f8f8;
+  padding: 20px;
+  margin-bottom: 20px;
+  border-radius: 10px;
+  box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s ease;
+}
+
+.project-card:hover {
+  transform: scale(1.1);
+  transition: 0.4s;
+  box-shadow: 6px 6px 12px rgba(0, 0, 0, 0.2);
+}
+
+.project-card h2 {
+  margin-top: 0;
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1);
+  transition: text-shadow 0.3s ease;
+}
+
+.project-card:hover h2 {
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
+}
+
+.project-card p {
+  color: #070202;
+}
+
+.project-card a {
+  display: inline-block;
+  padding: 8px 12px;
+  background-color: #fff;
+  color: #333;
+  border-radius: 5px;
+  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s ease;
+  text-decoration: none;
 }
